--- a/frontend/src/app/pacientes/formulario/cartao-sus/paciente-form-cartao-sus.component.html
+++ b/frontend/src/app/pacientes/formulario/cartao-sus/paciente-form-cartao-sus.component.html
@@ -1,69 +1,88 @@
 <div class="p-grid p-fluid" [formGroup]="formGroup">
-    <div class="p-col-12 p-grid" formGroupName="cartaoSUS">
-        <div
-            nInputMask
-            label="Número"
-            formControlName="numero"
-            mask="999999999999999"
-            placeholder="___ ____ ____ ____"
-            tooltip="Informe o número do Cartão SUS (CNS)."
-            class="p-md-2"
-        ></div>
-        <div
-            nAutoComplete
-            [service]="justificativaService"
-            field="valor"
-            formControlName="justificativaId"
-            label="Justificativa da Ausência CNS"
-            class="p-md-3"
-        ></div>
-        <div
-            nAutoComplete
-            [service]="motivoDoCadastroService"
-            field="valor"
-            formControlName="motivoDoCadastroId"
-            label="Motivo Cadastro"
-            class="p-md-2"
-        ></div>
-        <div
-            nDropdown
-            label="Doc. Referência"
-            [options]="opcoesDeDocumentoDeReferencia"
-            formControlName="documentoDeReferencia"
-            class="p-md-2"
-        ></div>
-        <div
-            nInputMask
-            label="Cartão Nacional Saúde Mãe"
-            formControlName="cartaoNacionalSaudeMae"
-            mask="999999999999999"
-            placeholder="___ ____ ____ ____"
-            tooltip="Informe o CNS da mãe do paciente."
-            class="p-md-3"
-        ></div>
-    </div>
-    <div class="p-md-12">
-        <p-fieldset legend="Se Naturalizado Brasileiro">
-            <div class="p-col-12 p-grid" formGroupName="cartaoSUS">
+    <p-fieldset legend="Dados do Cartão do SUS">
+        <div class="p-fluid p-formgrid p-grid" formGroupName="cartaoSUS">
+            <div class="p-md-12 p-lg-2">
                 <div
-                    madreCalendar
-                    label="Data de Entrada no Brasil"
-                    formControlName="dataDeEntradaNoBrasil"
-                    class="p-md-4 p-sm-12"
+                    nInputMask
+                    label="Número"
+                    required
+                    formControlName="numero"
+                    mask="999999999999999"
+                    tooltip="Informe o número do Cartão SUS (CNS)."
                 ></div>
-                <div
-                    madreCalendar
-                    label="Data de Naturalização"
-                    formControlName="dataDeNaturalizacao"
-                    class="p-md-4 p-sm-12"
-                ></div>
-                <div
-                    nInputText
-                    label="Portaria"
-                    formControlName="portaria"
-                    class="p-md-4 p-sm-12"
-                ></div>
+                <p-message
+                    severity="error"
+                    text="O número do cartão é obrigatório"
+                    *ngIf="formGroup.controls.cartaoSUS.controls['numero'].errors?.required &&
+                            formGroup.controls.cartaoSUS.controls['numero'].touched">
+                </p-message>
+                <p-message
+                    severity="error"
+                    text="O número do cartão está inválido"
+                    *ngIf=" !formGroup.controls.cartaoSUS.controls['numero'].errors?.required && formGroup.controls.cartaoSUS.controls['numero'].errors?.customCns &&
+                            formGroup.controls.cartaoSUS.controls['numero'].touched">
+                </p-message>
             </div>
-        </p-fieldset>
-    </div>
+            <div
+                nAutoComplete
+                [service]="justificativaService"
+                field="valor"
+                formControlName="justificativaId"
+                label="Justificativa da Ausência CNS"
+                class="p-md-3"
+            ></div>
+            <div
+                nAutoComplete
+                [service]="motivoDoCadastroService"
+                field="valor"
+                formControlName="motivoDoCadastroId"
+                label="Motivo Cadastro"
+                class="p-md-2"
+            ></div>
+            <div
+                nDropdown
+                label="Doc. Referência"
+                [options]="opcoesDeDocumentoDeReferencia"
+                formControlName="documentoDeReferencia"
+                class="p-md-2"
+            ></div>
+            <div class="p-md-12 p-lg-3">
+                <div
+                    nInputMask
+                    label="Cartão Nacional Saúde Mãe"
+                    formControlName="cartaoNacionalSaudeMae"
+                    mask="999999999999999"
+                    tooltip="Informe o CNS da mãe do paciente."
+                ></div>
+                <p-message
+                    severity="error"
+                    text="O número do cartão está inválido"
+                    *ngIf=" formGroup.controls.cartaoSUS.controls['cartaoNacionalSaudeMae'].value.length && formGroup.controls.cartaoSUS.controls['cartaoNacionalSaudeMae'].errors?.customCns &&
+                            formGroup.controls.cartaoSUS.controls['cartaoNacionalSaudeMae'].touched">
+                </p-message>
+            </div>
+        </div>
+    </p-fieldset>
+    <p-fieldset legend="Se Naturalizado Brasileiro">
+        <div class="p-fluid p-formgrid p-grid" formGroupName="cartaoSUS">
+            <div
+                madreCalendar
+                label="Data de Entrada no Brasil"
+                formControlName="dataDeEntradaNoBrasil"
+                class="p-md-4 p-sm-12"
+            ></div>
+            <div
+                madreCalendar
+                label="Data de Naturalização"
+                formControlName="dataDeNaturalizacao"
+                class="p-md-4 p-sm-12"
+            ></div>
+            <div
+                nInputText
+                label="Portaria"
+                formControlName="portaria"
+                class="p-md-4 p-sm-12"
+            ></div>
+        </div>
+    </p-fieldset>
 </div>
