--- a/frontend/src/app/pacientes/formulario/responsavel/paciente-form-responsavel.component.html
+++ b/frontend/src/app/pacientes/formulario/responsavel/paciente-form-responsavel.component.html
@@ -1,83 +1,86 @@
 <div class="p-grid p-fluid" [formGroup]="formGroup" (ngSubmit)="adicionarTelefoneALista()">
-    <div class="p-col-12 p-grid" formGroupName="responsavel">
-        <div
-            nInputText
-            label="Nome do Responsável"
-            formControlName="nomeDoResponsavel"
-            class="p-md-6 p-sm-12"
-        ></div>
-        <div
-            nAutoComplete
-            [service]="grauDeParentescoService"
-            field="valor"
-            formControlName="grauDeParentescoId"
-            label="Grau de Parentesco"
-            class="p-md-6 p-sm-12"
-        ></div>
-    </div>
-</div>
-
-<form [formGroup]="telefone" (ngSubmit)="adicionarTelefoneALista()">
-    <div class="p-grid">
-        <div class="p-md-3 p-sm-12">
-            <span class="p-float-label">
-                <p-dropdown
-                    [options]="tiposDeTelefone"
-                    formControlName="tipo"
-                    (onChange)="tipoDeMascara($event)"
-                >
-                </p-dropdown>
-                <label>Tipos De Telefone</label>
-            </span>
+    <p-fieldset legend="Dados do Responsável">
+        <div class="p-fluid p-formgrid p-grid" formGroupName="responsavel">
+            <div
+                nInputText
+                label="Nome do Responsável"
+                formControlName="nomeDoResponsavel"
+                class="p-md-6 p-sm-12"
+            ></div>
+            <div
+                nAutoComplete
+                [service]="grauDeParentescoService"
+                field="valor"
+                formControlName="grauDeParentescoId"
+                label="Grau de Parentesco"
+                class="p-md-6 p-sm-12"
+            ></div>
         </div>
+    </p-fieldset>
 
-        <div class="p-md-2 p-sm-12">
-            <span class="p-float-label">
-                <p-autoComplete
-                    field="valor"
-                    [suggestions]="listaDDD"
-                    formControlName="ddd"
-                    (completeMethod)="buscaDDD($event)"
-                    [dropdown]="true"
-                ></p-autoComplete>
-                <label>DDD</label>
-            </span>
-        </div>
 
-        <div class="p-md-3 p-sm-12">
-            <span class="p-float-label">
-                <p-inputMask
-                    type="text"
-                    formControlName="numero"
-                    mask="{{ mascara }}"
-                ></p-inputMask>
-                <label>Telefone</label>
-            </span>
-        </div>
+    <form [formGroup]="telefone" (ngSubmit)="adicionarTelefoneALista()">
+        <p-fieldset legend="Adicionar Contato">
+            <div class="p-fluid p-formgrid p-grid">
+                <div class="p-md-3 p-sm-12">
+                    <span class="p-float-label">
+                        <p-dropdown
+                            [options]="tiposDeTelefone"
+                            formControlName="tipo"
+                            (onChange)="tipoDeMascara($event)"
+                        >
+                        </p-dropdown>
+                        <label>Tipos De Telefone</label>
+                    </span>
+                </div>
 
-        <div class="p-md-4 p-sm-12">
-            <span class="p-float-label">
-                <input type="text" pInputText formControlName="observacao" />
-                <label>Observação</label>
-            </span>
-        </div>
-    </div>
+                <div class="p-md-2 p-sm-12">
+                    <span class="p-float-label">
+                        <p-autoComplete
+                            field="valor"
+                            [suggestions]="listaDDD"
+                            formControlName="ddd"
+                            (completeMethod)="buscaDDD($event)"
+                            [dropdown]="true"
+                        ></p-autoComplete>
+                        <label>DDD</label>
+                    </span>
+                </div>
 
-    <div class="p-grid">
-        <div class="p-col-12">
-            <p-button label="Adicionar" type="button" (onClick)="adicionarTelefoneALista()">
-            </p-button>
-        </div>
-    </div>
+                <div class="p-md-3 p-sm-12">
+                    <span class="p-float-label">
+                        <p-inputMask
+                            type="text"
+                            formControlName="numero"
+                            mask="{{ mascara }}"
+                        ></p-inputMask>
+                        <label>Telefone</label>
+                    </span>
+                </div>
 
-    <div class="p-grid">
-        <div class="p-col-12">
+                <div class="p-md-4 p-sm-12">
+                    <span class="p-float-label">
+                        <input type="text" pInputText formControlName="observacao" />
+                        <label>Observação</label>
+                    </span>
+                </div>
+            </div>
+
+            <div class="p-fluid p-formgrid p-grid">
+                <div class="p-col-12 p-md-4 p-sm-12">
+                    <p-button label="Adicionar" type="button" (onClick)="adicionarTelefoneALista()">
+                    </p-button>
+                </div>
+            </div>
+        </p-fieldset>
+
+        <p-fieldset legend="Lista de Contatos">
             <basis-datatable type="memory" [verticalButtons]="false" [value]="telefones" #datatable>
                 <p-column header="Tipo" field="tipo"></p-column>
                 <p-column header="DDD" field="ddd"></p-column>
                 <p-column header="Telefone" field="numero"></p-column>
                 <p-column header="Observação" field="observacao"></p-column>
             </basis-datatable>
-        </div>
-    </div>
-</form>
+        </p-fieldset>
+    </form>
+</div>
